# Py16-web-hw08

./: collection_odm.py  crud_collection.py  pyproject.toml
BD-homework/: models.py  search_quotes.py
BD-homework-2/: consumer.py  consumer_email.py  consumer_sms.py  models.py  produser.py
cloud_AMQP/: app.py  consumer.py
mongodb/: crud_odm.py  insert_collection.py
rabbit_exchange/: consumer.py  producer.py
rabbit_fanout/: consumer.py  producer.py
redis/: cache.py  redis_memory.py
