[tool.poetry]
name = "py16-web-hw08"
version = "0.1.0"
description = ""
authors = ["Maximus-22 <maksim.melnichenko@nservice.com.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.0"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
